--- a/src/main/resources/static/admin/phu/loaikhachhang/index.html
+++ b/src/main/resources/static/admin/phu/loaikhachhang/index.html
@@ -8,31 +8,31 @@
                             <li class="breadcrumb-item">
                                 <a href="#">Julie</a>
                             </li>
-                            <li class="breadcrumb-item active">Size</li>
+                            <li class="breadcrumb-item active">Loại áo</li>
                         </ol>
                     </div>
-                    <h4 class="page-title">Size</h4>
+                    <h4 class="page-title">Loại áo</h4>
                 </div>
             </div>
         </div>
-<!--        <nav>-->
-<!--            <div class="nav nav-tabs" id="nav-tab" role="tablist">-->
-<!--                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#edit" type="button"-->
-<!--                   role="tab" aria-selected="false">EDITION</a>-->
-<!--                <a href="javascript:(0);" class="nav-link active" data-toggle="tab" data-target="#list" type="button"-->
-<!--                   role="tab" aria-selected="true">LISTS</a>-->
-<!--            </div>-->
-<!--        </nav>-->
+        <!--        <nav>-->
+        <!--            <div class="nav nav-tabs" id="nav-tab" role="tablist">-->
+        <!--                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#edit" type="button"-->
+        <!--                   role="tab" aria-selected="false">EDITION</a>-->
+        <!--                <a href="javascript:(0);" class="nav-link active" data-toggle="tab" data-target="#list" type="button"-->
+        <!--                   role="tab" aria-selected="true">LISTS</a>-->
+        <!--            </div>-->
+        <!--        </nav>-->
         <div class="tab-content" id="nav-tabContent">
-<!--            <div class="tab-pane fade" id="edit" role="tabpanel">-->
-<!--                <div ng-include="'/admin/phu/loaikhachhang/_form.html'"></div>-->
-<!--            </div>-->
-<!--            <div class="tab-pane fade show active" id="list" role="tabpanel">-->
-<!--                <div ng-include="'/admin/phu/loaikhachhang/_table.html'"></div>-->
-<!--            </div>-->
-                        <div class="tab-pane fade show active" id="list" role="tabpanel">
-                            <div ng-include="'/admin/phu/loaikhachhang/view.html'"></div>
-                        </div>
+            <!--            <div class="tab-pane fade" id="edit" role="tabpanel">-->
+            <!--                <div ng-include="'/admin/phu/loaikhachhang/_form.html'"></div>-->
+            <!--            </div>-->
+            <!--            <div class="tab-pane fade show active" id="list" role="tabpanel">-->
+            <!--                <div ng-include="'/admin/phu/loaikhachhang/_table.html'"></div>-->
+            <!--            </div>-->
+            <div class="tab-pane fade show active" id="list" role="tabpanel">
+                <div ng-include="'/admin/phu/loaikhachhang/view.html'"></div>
+            </div>
         </div>
     </div>
 </div>
