--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -123,7 +123,7 @@
                 <li class="submenu">
                     <a href="javascript:void(0);"><img src="/assetss/img/icons/sales1.svg" alt="img"><span>Đơn hàng</span> <span class="menu-arrow"></span></a>
                     <ul>
-                        <li><a href="#">Chờ xác nhận</a></li>
+                        <li><a href="#!order">Chờ xác nhận</a></li>
                         <li><a href="#">Đã xác nhận</a></li>
                         <li><a href="#">Giao hàng</a></li>
                         <li><a href="#">Hoàn thành</a></li>
