--- a/src/main/resources/static/admin/order/_table2.html
+++ b/src/main/resources/static/admin/order/_table2.html
@@ -10,33 +10,22 @@
                 <th>Mã giảm giá</th>
                 <th>Phí giao hàng</th>
                 <th>Tổng tiền</th>
-                <th>Duyệt đơn</th>
             </tr>
             </thead>
             <tbody>
             <tr ng-repeat="item in items">
-                <td class="align-center">{{item.id}}</td>
-                <td class="align-center">{{item.account.username}}</td>
-                <td class="align-center">{{item.tinh}},{{item.huyen}},{{item.xa}},{{item.dcChiTiet}}</td>
-                <td class="align-center">{{item.ngayDatHang}}</td>
-                <td class="align-center">
+                <td>{{item.id}}</td>
+                <td>{{item.account.username}}</td>
+                <td>{{item.tinh}},{{item.huyen}},{{item.xa}},{{item.dcChiTiet}}</td>
+                <td>{{item.ngayDatHang}}</td>
+                <td>
                     {{item.maGiamGia ? item.maGiamGia : 'Không có'}}
                 </td>
 
-                <td class="align-center">
+                <td>
                     {{item.phiGiaoHang}}
                 </td>
-                <td class="align-center">{{item.tongTien}}</td>
-                <td class="align-center">
-                    <div class="btn-group btn-group-xs">
-                        <button ng-click="xacNhan(item)" class="btn btn-icon">
-                            <i class="fas fa-check" style="color: #47e10e;"></i>
-                        </button>
-                        <button ng-click="tuChoi(item)" class="btn btn-danger">
-                            <i class="fa fa-xs fa-times"></i>
-                        </button>
-                    </div>
-                </td>
+                <td>{{item.tongTien}}</td>
             </tr>
             </tbody>
         </table>
