--- a/src/main/resources/static/admin/order/_table.html
+++ b/src/main/resources/static/admin/order/_table.html
@@ -22,10 +22,7 @@
                 <td>
                     {{item.maGiamGia ? item.maGiamGia : 'Không có'}}
                 </td>
-
-                <td>
-                    <input type="text" ng-model="item.phiGiaoHang" class="form-control"/>
-                </td>
+                <td>{{item.phiGiaoHang}}</td>
                 <td>{{item.tongTien}}</td>
                 <td>
                     <span ng-if="item.thanhToan === 0">Chưa thanh toán</span>
