--- a/src/main/resources/static/admin/order/_table.html
+++ b/src/main/resources/static/admin/order/_table.html
@@ -1,13 +1,12 @@
 <div class="row mx-0 bg-white" ng-if="items">
     <div class="col-12 py-3">
-        <table id="datatable-buttons1" class="table table-collapse table-bordered dt-responsive">
+        <table id="datatable-buttons-1" class="table table-collapse table-bordered dt-responsive">
             <thead>
             <tr>
                 <th>Id</th>
                 <th>Khách hàng</th>
-                <th>Địa chỉ</th>
                 <th>Mã giảm giá</th>
-                <th>Phí giao hàng</th>
+                <th>Ngày đặt</th>
                 <th>Tổng tiền</th>
                 <th>Thanh toán</th>
                 <th>Chi tiết</th>
@@ -18,11 +17,12 @@
             <tr ng-repeat="item in items">
                 <td>{{item.id}}</td>
                 <td>{{item.account.username}}</td>
-                <td>{{item.tinh}},{{item.huyen}},{{item.xa}},{{item.dcChiTiet}}</td>
                 <td>
                     {{item.maGiamGia ? item.maGiamGia : 'Không có'}}
                 </td>
-                <td>{{item.phiGiaoHang}}</td>
+                <td>{{ item.ngayDatHang | date:'HH:mm, dd-MM-yyyy' }}</td>
+
+
                 <td>{{item.tongTien}}</td>
                 <td>
                     <span ng-if="item.thanhToan === 0">Chưa thanh toán</span>
@@ -49,7 +49,6 @@
         </table>
     </div>
 </div>
-<script src="/assetss/js/init.js"></script>
 
 <!-- Modal -->
 <div id="orderDetailModal" class="modal fade" role="dialog">
@@ -62,10 +61,7 @@
             </div>
             <div class="modal-body">
                 <div ng-include="'/admin/order/orderDetailModal.html'"></div>
-                <!-- Display selectedOrder data -->
                 <div>
-
-                    <!-- Display other information as needed -->
                 </div>
             </div>
         </div>
