--- a/src/main/resources/static/admin/order/_table1.html
+++ b/src/main/resources/static/admin/order/_table1.html
@@ -1,24 +1,23 @@
 <div class="row mx-0 bg-white" ng-if="items">
     <div class="col-12 py-3">
-        <table id="datatable-buttons2" class="table table-collapse table-bordered dt-responsive">
+        <table id="datatable-buttons-2" class="table table-collapse table-bordered dt-responsive">
             <thead>
             <tr>
                 <th>Id</th>
                 <th>Khách hàng</th>
-                <th>Địa chỉ</th>
+
                 <th>Ngày đặt hàng</th>
                 <th>Mã giảm giá</th>
                 <th>Phí giao hàng</th>
                 <th>Tổng tiền</th>
-                <th>Duyệt đơn</th>
+                <th>Giao hàng</th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="item in items">
+            <tr ng-repeat="item in items1">
                 <td>{{item.id}}</td>
                 <td>{{item.account.username}}</td>
-                <td>{{item.tinh}},{{item.huyen}},{{item.xa}},{{item.dcChiTiet}}</td>
-                <td>{{item.ngayDatHang}}</td>
+                <td>{{ item.ngayDatHang | date:'mm:HH dd-MM-yyyy' }}</td>
                 <td>
                     {{item.maGiamGia ? item.maGiamGia : 'Không có'}}
                 </td>
@@ -54,4 +53,3 @@
 		<i class="fas fa-arrow-to-right"></i>
 	</button>
 </div> -->
-<script src="/assetss/js/init.js"></script>
