--- a/src/main/resources/static/admin/order/_table4.html
+++ b/src/main/resources/static/admin/order/_table4.html
@@ -1,6 +1,6 @@
 <div class="row mx-0 bg-white" ng-if="items">
     <div class="col-12 py-3">
-        <table id="datatable-buttons3" class="table table-collapse table-bordered dt-responsive">
+        <table id="datatable-buttons-5" class="table table-collapse table-bordered dt-responsive">
             <thead>
             <tr>
                 <th>Id</th>
@@ -14,11 +14,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="item in items">
+            <tr ng-repeat="item in items4">
                 <td>{{item.id}}</td>
                 <td>{{item.account.username}}</td>
                 <td>{{item.tinh}},{{item.huyen}},{{item.xa}},{{item.dcChiTiet}}</td>
-                <td>{{item.ngayDatHang}}</td>
+                <td>{{ item.ngayDatHang | date:'mm:HH dd-MM-yyyy' }}</td>
                 <td>
                     {{item.maGiamGia ? item.maGiamGia : 'Không có'}}
                 </td>
@@ -40,19 +40,3 @@
         </table>
     </div>
 </div>
-<!-- <div class="card-header text-center">
-	<button ng-click="pager.first()" class="btn btn-danger">
-		<i class="fas fa-arrow-to-left"></i>
-	</button>
-	<button ng-click="pager.prev()" class="btn btn-primary">
-		<i class="fas fa-arrow-left"></i>
-	</button>
-	<button class="btn btn-success">{{pager.page + 1}} of {{pager.count?pager.count:'1'}}</button>
-	<button ng-click="pager.next()" class="btn btn-primary">
-		<i class="fas fa-arrow-right"></i>
-	</button>
-	<button ng-click="pager.last()" class="btn btn-danger">
-		<i class="fas fa-arrow-to-right"></i>
-	</button>
-</div> -->
-<script src="/assetss/js/init.js"></script>
